Update Prediction Screen

--- a/Gui.kv
+++ b/Gui.kv
@@ -68,6 +68,12 @@
                             text: '50'
                     MyBox:
                         MyLabel:
+                            text: 'Gender'
+                        MyInput:
+                            id: input_gen
+                            text: '1'
+                    MyBox:
+                        MyLabel:
                             text: 'Number of Pregnancies'
                         MyInput:
                             id: input_preg
@@ -108,6 +114,42 @@
                         MyInput:
                             id: input_dpf
                             text: '0.627'
+                    MyBox:
+                        MyLabel:
+                            text: 'Height'
+                        MyInput:
+                            id: input_h
+                            text: '164'
+                    MyBox:
+                        MyLabel:
+                            text: 'Weight'
+                        MyInput:
+                            id: input_w
+                            text: '80'
+                    MyBox:
+                        MyLabel:
+                            text: 'Systolic Blood Pressure'
+                        MyInput:
+                            id: input_sbp
+                            text: '120'
+                    MyBox:
+                        MyLabel:
+                            text: 'Diastolic Blood Pressure'
+                        MyInput:
+                            id: input_dbp
+                            text: '80'
+                    MyBox:
+                        MyLabel:
+                            text: 'Cholesterol'
+                        MyInput:
+                            id: input_chl
+                            text: '1'
+                    MyBox:
+                        MyLabel:
+                            text: 'Do You Smoke?'
+                        MyInput:
+                            id: input_smk
+                            text: '1'
 
             Button:
                 size_hint: 0.3, 0.05
