Update Prediction Screen

--- a/Gui.kv
+++ b/Gui.kv
@@ -150,7 +150,48 @@
                         MyInput:
                             id: input_smk
                             text: '1'
-
+                    MyBox:
+                        MyLabel:
+                            text: 'Waist Circumference'
+                        MyInput:
+                            id: input_wc
+                            text: '90'
+                   #MyBox:
+                        MyLabel:
+                            text: 'ECG'
+                        MyInput:
+                            id: input_w
+                            text: '80'
+                    MyBox:
+                        MyLabel:
+                            text: 'Systolic Blood Pressure'
+                        MyInput:
+                            id: input_sbp
+                            text: '120'
+                    MyBox:
+                        MyLabel:
+                            text: 'Diastolic Blood Pressure'
+                        MyInput:
+                            id: input_dbp
+                            text: '80'
+                    MyBox:
+                        MyLabel:
+                            text: 'Cholesterol'
+                        MyInput:
+                            id: input_chl
+                            text: '1'
+                    MyBox:
+                        MyLabel:
+                            text: 'Do You Smoke?'
+                        MyInput:
+                            id: input_smk
+                            text: '1'
+                    MyBox:
+                        MyLabel:
+                            text: 'Waist Circumference'
+                        MyInput:
+                            id: input_wc
+                            text: '90'
             Button:
                 size_hint: 0.3, 0.05
                 pos_hint: {"x": 0.355}
