Update Prediction Screen

--- a/Gui.kv
+++ b/Gui.kv
@@ -156,42 +156,61 @@
                         MyInput:
                             id: input_wc
                             text: '90'
-                   #MyBox:
+                    MyBox:
                         MyLabel:
                             text: 'ECG'
                         MyInput:
-                            id: input_w
-                            text: '80'
+                            id: input_ecg
+                            text: '0.001'
                     MyBox:
                         MyLabel:
-                            text: 'Systolic Blood Pressure'
+                            text: 'EMG'
                         MyInput:
-                            id: input_sbp
-                            text: '120'
+                            id: input_emg
+                            text: '0.931'
                     MyBox:
                         MyLabel:
-                            text: 'Diastolic Blood Pressure'
+                            text: 'Foot GSR'
                         MyInput:
-                            id: input_dbp
-                            text: '80'
+                            id: input_f_gsr
+                            text: '5.91'
                     MyBox:
                         MyLabel:
-                            text: 'Cholesterol'
+                            text: 'Hand GSR'
                         MyInput:
-                            id: input_chl
-                            text: '1'
+                            id: input_h_gsr
+                            text: '19.773'
                     MyBox:
                         MyLabel:
-                            text: 'Do You Smoke?'
+                            text: 'Heart Rate'
                         MyInput:
-                            id: input_smk
-                            text: '1'
+                            id: input_hr
+                            text: '99.056'
                     MyBox:
                         MyLabel:
-                            text: 'Waist Circumference'
+                            text: 'RESP'
                         MyInput:
-                            id: input_wc
-                            text: '90'
+                            id: input_resp
+                            text: '35.59'
+                    #MyBox:
+                        MyLabel:
+                            text: 'Do You Use a Computer?'
+                        MyInput:
+                            id: input_comp
+                            text: '19.773'
+                    MyBox:
+                        MyLabel:
+                            text: 'How Many Hours a Day?'
+                        MyInput:
+                            id: input_hr
+                            text: '99.056'
+                    MyBox:
+                        MyLabel:
+                            text: 'Experience Back Pain'
+                        MyInput:
+                            id: input_resp
+                            text: '35.59'
+
             Button:
                 size_hint: 0.3, 0.05
                 pos_hint: {"x": 0.355}
