Update Prediction Screen

--- a/Gui.kv
+++ b/Gui.kv
@@ -192,24 +192,30 @@
                         MyInput:
                             id: input_resp
                             text: '35.59'
-                    #MyBox:
+                    MyBox:
                         MyLabel:
                             text: 'Do You Use a Computer?'
                         MyInput:
                             id: input_comp
-                            text: '19.773'
+                            text: '1'
                     MyBox:
                         MyLabel:
                             text: 'How Many Hours a Day?'
                         MyInput:
-                            id: input_hr
-                            text: '99.056'
+                            id: input_comp_hr
+                            text: '9'
                     MyBox:
                         MyLabel:
-                            text: 'Experience Back Pain'
+                            text: 'Continued/Interrupted Usage?'
+                        MyInput:
+                            id: input_hr
+                            text: '1'
+                    MyBox:
+                        MyLabel:
+                            text: 'Experience Neck/Shoulder/Back Pain/Headache/Fatigue/Dry Eyes/Blurred Vision/Eye Strain/Double Vision/Eye Redness/Eye Irritation'
                         MyInput:
                             id: input_resp
-                            text: '35.59'
+                            text: '1'
 
             Button:
                 size_hint: 0.3, 0.05
