Update Prediction Screen

--- a/Gui.kv
+++ b/Gui.kv
@@ -202,19 +202,19 @@
                         MyLabel:
                             text: 'How Many Hours a Day?'
                         MyInput:
-                            id: input_comp_hr
+                            id: input_hrs
                             text: '9'
                     MyBox:
                         MyLabel:
                             text: 'Continued/Interrupted Usage?'
                         MyInput:
-                            id: input_hr
+                            id: input_cui
                             text: '1'
                     MyBox:
                         MyLabel:
                             text: 'Experience Neck/Shoulder/Back Pain/Headache/Fatigue/Dry Eyes/Blurred Vision/Eye Strain/Double Vision/Eye Redness/Eye Irritation'
                         MyInput:
-                            id: input_resp
+                            id: input_exp
                             text: '1'
 
             Button:
